app/assets/stylesheets/application/_navigation.css.sass
.sticky-navbar
  background: $brick
  z-index: 10
  padding: 11px 0 6px 0
  &.stuck-to-top
    +box-shadow(0px 0px 6px 0px black)
    position: fixed
    top: 0
    left: 0
    right: 0
    z-index: 9999

  .navbar-inner
    background: none
    color: $white
  .navbar .nav > li > a
    padding: 10px
    color: $white
    &:hover
      color: $white

  .nav-anchors
    text-transform: uppercase
    +font-sans-tiny
    font-weight: bold
    li
      position: relative
      padding: 0 5px
      &:before
        content: ''
        display: inline-block
        position: absolute
        left: 0
        top: 10px
        height: 14px
        border-left: 1px solid $white
      &:first-child
        &:before
          border: 0
      a[class^="icon-"]
        width: auto

        &:before
          margin-top: 2px
          vertical-align: middle
          font-size: 20px
          padding-right: 6px

  .disabled
    &:before
      color: $brickDark

